refactor: organiza e melhora a estrutura do projeto
- Remove as documentações das camadas
- Melhora a configuração do Docker
- Atualiza os arquivos Makefile
- Atualiza o go para v1.24
- Modifica a estrututa do projeto
