# internal/infrastructure/database/sqlc/models.go
@@ -9,9 +9,11 @@ import (
 )
 
 type User struct {
-	ID        int32     `json:"id"`
-	Name      string    `json:"name"`
-	Email     string    `json:"email"`
-	CreatedAt time.Time `json:"created_at"`
-	UpdatedAt time.Time `json:"updated_at"`
+	ID         int32     `json:"id"`
+	Name       string    `json:"name"`
+	Email      string    `json:"email"`
+	CreatedAt  time.Time `json:"created_at"`
+	DeletedAt  time.Time `json:"deleted_at"`
+	UpdatedAt  time.Time `json:"updated_at"`
+	InativedAt time.Time `json:"inatived_at"`
 }
