# internal/modules/user/route/user_route.go
@@ -1,0 +1,16 @@
+package route
+
+import (
+	"project/internal/modules/user/handle"
+
+	"github.com/labstack/echo/v4"
+)
+
+// RegisterUserRoutes registra as rotas do usuário
+func RegisterUserRoutes(e *echo.Echo, userHandler *handle.UserHandler) {
+	// Grupo de rotas de usuário
+	userGroup := e.Group("/users")
+	
+	// Registra rotas
+	userGroup.POST("", userHandler.CreateUser)
+	}
